[gd_scene load_steps=4 format=2]

[ext_resource path="res://Weapons/Projectile.gd" type="Script" id=1]
[ext_resource path="res://Assets/Projectiles/projectile.jpg" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.0
height = 50.0

[node name="Projectile" type="Area2D"]
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 1 )
max_damage = 50
min_damage = 10

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="KillTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
